--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/ngrok": "^2.4.3",
     "expo": "~40.0.0",
+    "expo-contacts": "~8.6.0",
+    "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
